Fixed coin graphs not showing

--- a/web/style.css
+++ b/web/style.css
@@ -449,20 +449,31 @@ a.contact {
   gap: 30px;
 }
 
+.gridGraphContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  gap: 30px;
+  justify-items: center;
+}
+
 .graphElement {
-  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 1000px;
+  min-width: 500px;
+  min-height: 350px;
+  width: 100%;
   margin-bottom: 30px;
+  padding: 15px;
+  box-sizing: border-box;
 }
 
 .graphElement canvas {
-  width: 450px;
-  height: 450px;
-}
-
-.gridGraphContainer {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 30px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 #contenidoActual {
